# symbolize

./: .env  .envrc  .eslintrc.json  .gitignore  .npmrc  .sqlfluffignore  .watchmanconfig  Cargo.toml  Dockerfile  Procfile  Procfile.in  README.md  Taskfile.in.yml  Taskfile.yml  build.ts  cabal.project  cabal.project.freeze  deny.toml  dev.js  dev.ts  dprint.json  example.env  fly.toml  global.d.ts  hie.yaml  loader.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier-plugin-cockroach.cjs  production.md  pyproject.toml  rust-toolchain.toml  rustfmt.toml  snowpack.config.cjs  snowpack.config.js  stack.yaml  suppress.cjs  tsconfig.json
.cargo/: config.toml
api/: context.ts  dev.ts  index.t.ts  index.test.browser.ts  index.test.node.ts  index.test.ts  index.ts  payload.test.ts  payload.ts  query.test.ts  query.ts  route.test.ts  route.ts  serve.ts
app/: Dockerfile  fly.toml
cache/: Dockerfile  fly.toml
core/: endpoint.test.ts  endpoint.ts  index.t.ts  index.test.ts  message.t.ts  message.test.ts  message.ts  payload.test.ts  payload.ts
db/: index.ts
dev-build/: Taskfile.yml  index.ts  modules.ts  package.json
dev-cargo-bin/: Cargo.toml  Taskfile.yml
dev-cargo-build/: Cargo.toml  Taskfile.yml
dev-cargo-build/src/: main_.rs  mod.rs
dev-esbuild/: Taskfile.yml  context.ts  database.ts  db.ts  global.d.ts  main.ts  modules.ts  output.ts  package.json  tsconfig.json
dev-eslint/: Taskfile.yml  index.json  package.json
dev-gen/: Taskfile.yml  intertwine-dev-gen.cabal  package.yaml  symbolize-dev-gen.cabal
dev-hlint/: base.yaml
dev-loader/: Taskfile.yml  package.json  tsconfig.json
dev-local/: Taskfile.yml  index.ts  package.json  tsconfig.json
dev-nix-init/: flake.nix
dev-nix-shell/: Taskfile.yml  curl.nix  dasel.nix  dbmate.nix  easyrsa.nix  fd.nix  flake.nix  git.nix  haskell.nix  node.nix  overmind.nix  rust.nix  sqlfluff.nix  sqlite.nix  task.nix  unzip.nix  watchman.nix  woff2.nix
dev-node-loader/: Taskfile.yml  index.js  package.json  tsconfig.json
dev-node-suppress/: Taskfile.yml  index.cjs  package.json
dev-pnpm-test/: Taskfile.yml  index.ts  main.ts  package.json  tsconfig.json
dev-prettier/: Taskfile.yml  index.json  package.json
dev-sim/: Cargo.toml  Taskfile.yml
dev-sim/src/: begin.rs  cancel_receiver_stream.rs  command.rs  connect.rs  context.rs  disconnect.rs  end.rs  help.rs  main_.rs  mod.rs  parse.rs  ping.rs  run.rs
dev-stack-bin/: Taskfile.yml  intertwine-dev-stack-bin.cabal  package.yaml  symbolize-dev-stack-bin.cabal
dev-suppress/: Taskfile.yml  package.json  tsconfig.json
dev-task/: Nix.yml  Pnpm.yml  Stack.yml  cabal.yml  cargo.yml  easyrsa.yml  font.yml  nix.yml  overmind.yml  pnpm.yml  sqlite.yml  stack.yml  tmpfs.yml  watchman.yml
dev-tsconfig/: Taskfile.yml  package.json  tsconfig.json
dev-watchman-client/: Cargo.toml  Taskfile.yml
dev-watchman-client/src/: main_.rs  mod.rs  nix_child.rs
fts/: Cargo.toml  Dockerfile  fly.toml
fts/src/: main.rs  message_test.rs
fts/src/api/: auth.rs  mod.rs  search_query.rs  search_update.rs
fts/src/core/: document.rs  hex.rs  hex_test.rs  message.rs  message_test.rs  mod.rs  result.rs
fts/src/db/: mod.rs
fts/src/search/: mod.rs
lib-collection/: Taskfile.yml  applyTemplate.test.ts  applyTemplate.ts  groupBy.test.ts  groupBy.ts  index.test.ts  index.ts  memo.test.ts  memo.ts  multiMemo.test.ts  multiMemo.ts  package.json  stripPrefix.test.ts  stripPrefix.ts  tsconfig.json
lib-compute/: Taskfile.yml  index.test-d.ts  index.test.ts  index.ts  package.json  tsconfig.json
lib-concurrency/: Taskfile.yml  eventSemaphore.ts  index.ts  package.json  tsconfig.json
lib-contrast/: Taskfile.yml  atom.test.ts  atom.ts  atomIntern.ts  className.ts  container.test.ts  container.ts  context.ts  customProperty.test.ts  customProperty.ts  customPropertyName.ts  data.ts  expression.test-d.ts  expression.ts  expressionIntern.test.ts  expressionIntern.ts  function.test.ts  function.ts  generatedName.ts  index.test.ts  index.ts  math.test.ts  math.ts  media.test.ts  media.ts  package.json  props.test-d.ts  props.test.ts  props.ts  pseudo.test.ts  pseudo.ts  pseudoElement.test.ts  pseudoElement.ts  pseudoState.test.ts  pseudoState.ts  rule.ts  scope.ts  select.test.ts  select.ts  style.test.ts  (+7 more)
lib-convey/: Taskfile.yml  context.ts  custom.test.ts  custom.ts  data.ts  each.test.ts  each.ts  element.test-d.ts  element.ts  elementAttr.test-d.ts  elementAttr.ts  elementAttrs.test-d.ts  elementAttrs.ts  empty.test.ts  empty.ts  eventMap.ts  fragment.ts  global.d.ts  html.test-d.ts  html.test.ts  html.ts  htmlAttrs.ts  if_.test.ts  if_.ts  index.browser.ts  index.node.ts  index.test-d.ts  index.test.ts  index.ts  items.test.ts  marker.ts  match.test.ts  math.test-d.ts  math.test.ts  math.ts  mathAttrs.ts  opaqueElement.ts  package.json  portal.test-d.ts  portal.test.ts  (+15 more)
lib-crypto/: Taskfile.yml  package.json  tsconfig.json
lib-dataflow/: Taskfile.yml  index.test-d.ts  index.test.ts  index.ts  package.json
lib-error/: Taskfile.yml  error.ts  (+5 more)
svc-gateway-host-run/: Cargo.toml  Taskfile.yml
svc-gateway-host-run/src/: context.rs  db.rs  executor.rs  handle.rs  handle_test.rs  hex.rs  main.rs  main_.rs  mod.rs  path.rs  random.rs  request.rs  response.rs  serve.rs  state.rs  task_tracker.rs  task_tracker_ext.rs
svc-gateway-host-run/src/header/: accept.rs  cache_control.rs  content_security_policy.rs  content_type.rs  e_tag.rs  if_none_match.rs  mod.rs  pair.rs  response_stream_id.rs  sec_fetch_dest.rs  sec_fetch_mode.rs  sec_fetch_site.rs  service_worker_allowed.rs
svc-gateway-host-run/src/query/: get_content_by_id.sql  get_content_by_path.sql
svc-gateway-host-run/src/request/: base.rs  content.rs  data.rs  ext.rs  mod.rs  simple.rs  stream.rs
svc-gateway-host-run/src/response/: base.rs  content.rs  content_test.rs  data.rs  error.rs  ext.rs  mod.rs  simple.rs  stream.rs
svc-search-host-read/: Cargo.toml  Dockerfile  Taskfile.yml
svc-search-host-read/src/: main.rs
svc-search-host-read/src/core/: hex.rs  mod.rs  result.rs
svc-search-host-read/src/db/: mod.rs
(+728 files in other folders)
