[workspace]
members = [
  "dev-cargo-build",
  "dev-watchman-client",
  "lib-hex-rs",
  "svc-gateway-host-run",
  "svc-search-host-read",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["std"] }
backon = { version = "0.4.1", features = [] }
bytes = { version = "1.5.0", features = [] }
clap = { version = "4.4.12", features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-queue", "std"] }
futures = { version = "0.3.30", features = [] }
http = { version = "1.0.0", features = [] }
http-body-util = { version = "0.1.0", features = [] }
hyper = { version = "1.0.1", features = ["http2", "server"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
intertwine-lib-hex = { version="0.1.0", path = "./lib-hex-rs" }
mime = { version = "0.3.17", features = [] }
mockall = { version = "0.12.1", features = [] }
nix = { version = "0.27.1", features = ["signal"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
rustls = { version = "0.22.4", features = ["logging", "ring", "tls12"] }
rustls-pemfile = { version = "2.0.0", features = ["std"] }
serde = { version = "1.0.194", features = ["derive", "std"] }
serde_json = { version = "1.0.110", features = [] }
thiserror = { version = "1.0.51", features = [] }
tokio = { version = "1.35.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread"] }
tokio-rustls = { version = "0.25.0", features = ["logging", "ring", "tls12"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
watchman_client = { version = "0.8.0", features = [] }
