[package]
name = "intertwine-dev-cargo-build"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "intertwine-dev-cargo-build"
path = "src/mod.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
