[package]
name = "symbolize-dev-cargo-build"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "symbolize-dev-cargo-build"
path = "src/mod.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
