[package]
name = "symbolize-dev-sim"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "symbolize-dev-sim"
path = "src/mod.rs"

[dependencies]
anyhow = { workspace = true }
rustyline-async = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
