[package]
name = "symbolize-dev-sim"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "symbolize-dev-sim"
path = "src/mod.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
rustyline-async = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }

[lints]
workspace = true
