[package]
name = "intertwine-dev-watchman-client"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "intertwine-dev-watchman-client"
path = "src/mod.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
watchman_client = { workspace = true }
