[package]
name = "symbolize-dev-watchman-client"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "symbolize-dev-watchman-client"
path = "src/mod.rs"

[dependencies]
anyhow = { workspace = true }
backon = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
tokio = { workspace = true }
watchman_client = { workspace = true }

[lints]
workspace = true
