[package]
name = "intertwine-svc-gateway-host-run"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "intertwine-svc-gateway-host-run"
path = "src/mod.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
mime = { workspace = true }
rusqlite = { workspace = true }
self_cell = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
