[package]
name = "intertwine-svc-gateway-host-run"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "intertwine-svc-gateway-host-run"
path = "src/mod.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
crossbeam = { workspace = true }
dashmap = { workspace = true }
form_urlencoded = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
intertwine-lib-hex = { workspace = true }
mime = { workspace = true }
ring = { workspace = true }
rusqlite = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[lints]
workspace = true
