[package]
name = "fertile-earth"
version = "0.1.0"
edition = "2021"

[dependencies]
base64.workspace = true
hyper.workspace = true
itertools.workspace = true
lindera.workspace = true
lindera-core.workspace = true
lindera-tantivy.workspace = true
num_cpus.workspace = true
openssl.workspace = true
percent-encoding.workspace = true
postgres-openssl.workspace = true
postgres-types.workspace = true
rand.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
strum.workspace = true
strum_macros.workspace = true
tantivy.workspace = true
time.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tower.workspace = true
tower-service.workspace = true
url.workspace = true
